# get-hired

./: .env.example  .gitignore  .session-checkpoints.sqlite-shm  .session-checkpoints.sqlite-wal  AGENTS.md  CLAUDE.md  CONTEXT.md  MVP_v1_2day.md  MVP_v2.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/bench/: cases.yaml  pending-cases-2026-07-11.yaml
data/forge/: review-queue-2026-07-11-report.md  review-queue-2026-07-11.yaml
data/replay/: deep-learning-strong.json
docs/adr/: 0001-control-hierarchy.md  0002-bayesian-skill-state.md  0003-tool-use-confined-to-interviewer.md  0004-hand-roll-orchestration-before-langgraph.md  0005-candidate-intent-aborts-infrastructure-degrades.md  0006-cross-session-memory-as-decayed-priors.md  0007-language-as-first-class-session-state.md  0008-question-packs-as-data-contract.md  0009-calibration-bench-gates-judge-changes.md  0010-per-role-model-routing.md  0011-derived-confidence-and-escalation.md  0014-taxonomy-as-pack-data.md
docs/audits/: 0007-rag-interviewer-smoke.md  0015-groq-cutover-live-validation.md  calibration-bench-2026-07-07.md  calibration-bench-2026-07-11-bilingual-mode.md  calibration-bench-2026-07-11-evidence-degrade.md  calibration-bench-2026-07-11-gpt-5.4-mini.md  calibration-bench-2026-07-11-json-schema.md  calibration-bench-2026-07-11-panel-baseline.md  calibration-bench-2026-07-11-panel-verdict.md  calibration-bench-2026-07-11-reanchor.md  calibration-bench-2026-07-11-trust-guards.md  calibration-bench-2026-07-11-vn-consistency-groq.md  calibration-bench-2026-07-11-vn-consistency.md  calibration-bench-2026-07-19.md  concept-retrieval-embedder-ab-2026-07-11.md  concept-retrieval-review-2026-07-11.md  concept-retrieval-review-chroma-2026-07-11.md  question-bank-review-2026-07-11.md
docs/design/: brand.md
docs/issues/: 0001-evaluate-one-answer.md  0002-skill-state-update.md  0003-weighted-score-guard.md  0004-provider-router-and-cutover-rehearsal.md  0005-within-question-micro-loop.md  0006-self-critique-reflection.md  0007-rag-concepts-and-tool-using-interviewer.md  0008-concept-docs-breadth.md  0009-diagnostic-topic-plan-and-priors.md  0010-supervisor-and-langgraph-migration.md  0011-study-planner-and-export.md  0012-ui-and-eval-discipline.md  0013-question-bank-breadth.md  0014-session-failure-isolation.md  0015-groq-cutover-execution-and-live-validation.md  0016-web-error-visibility-and-reconnect.md  0017-web-cancel-lifecycle-correctness.md  0018-candidate-intent-aborts-not-cascades.md  0019-session-resume-edge-cases.md  0020-supervisor-node-transport-error-backstop.md  0021-confidence-weighted-evidence.md  (+16 more)
scripts/: create_issues.sh  experiment_issue_0027_forced_escalation.py  review_issue_0008_chroma_retrieval.py  smoke_issue_0007.py  smoke_issue_0009.py
tests/: conftest.py  test_bank.py  test_bench.py  test_ci_tripwire.py  test_cli.py  test_concepts.py  test_diagnostic.py  test_eval_harness.py  test_evaluator.py  test_forge.py  test_interviewer.py  test_language.py  test_ledger.py  test_llm.py  test_microloop.py  test_pack.py  test_postmortem.py  test_replay.py  test_resources.py  test_roles.py  test_seeds.py  test_skill.py  test_study_planner.py  test_supervisor.py  test_trajectories.py  test_ui.py  test_usage.py  test_web_api.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
(+55 files in other folders)
