[project]
name = "interview-coach"
version = "0.1.0"
description = "Adaptive Interview Coach — a multi-agent mock technical interviewer (learning project)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.scripts]
coach = "interview_coach.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_coach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits a real LLM provider; skipped unless LLM credentials are configured",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
