[project]
name = "interview-coach"
version = "0.1.0"
description = "Adaptive Interview Coach — a multi-agent mock technical interviewer (learning project)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[project.scripts]
coach = "interview_coach.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_coach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run is offline/lightweight: provider-hitting tests and optional Chroma/BGE tests are
# deselected unless explicitly requested with `-m live` or `-m rag`.
addopts = "-m 'not live and not rag'"
markers = [
    "live: hits a real LLM provider; deselected by default — select explicitly with `-m live`",
    "rag: requires optional Chroma + sentence-transformers extras; deselected by default",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
